--- a/templates/archives.html
+++ b/templates/archives.html
@@ -28,39 +28,43 @@ Full archives of {{ SITENAME|striptags|e }} blog.
 
 <div class="row-fluid">
     <header class="page-header span10 offset2">
-    <h1><a href="{{ SITEURL }}/{{ ARCHIVES_URL|default('archives') }}">All Posts</a></h1>
+        <h1><a href="{{ SITEURL }}/{{ ARCHIVES_URL|default('archives') }}">All Posts</a></h1>
     </header>
 </div>
 <div class="row-fluid">
     <div class="span10 offset2">
         <div class="blog-archives">
             {% for article in dates %}
-                {% set year = article.date.strftime('%Y') %}
-                {% if loop.first %}
-                    <h2 id="{{year }}"><a href="#{{year}}">{{ year }}</a></h2>
-                {% else %}
-                    {% set prevyear = loop.previtem.date.strftime('%Y') %}
-                    {%if prevyear != year %}
-                        <h2 id="{{year }}"><a href="#{{year}}">{{ year }}</a></h2>
-                    {% endif %}
-                {% endif %}
+            {% set year = article.date.strftime('%Y') %}
+            {% if loop.first %}
+            <h2 id="{{year }}"><a href="#{{year}}">{{ year }}</a></h2>
+            {% else %}
+            {% set prevyear = loop.previtem.date.strftime('%Y') %}
+            {%if prevyear != year %}
+            <h2 id="{{year }}"><a href="#{{year}}">{{ year }}</a></h2>
+            {% endif %}
+            {% endif %}
 
-                {% if loop.last %}
-                    <article itemscope class="last-entry-of-year">
+            {% if article.category != 'MYPAGE' %}
+            {% if loop.last %}
+            <article itemscope class="last-entry-of-year">
                 {% else %}
                 {% set next_year = loop.nextitem.date.strftime('%Y') %}
 
-                    {% if next_year != year %}
-                        <article itemscope class="last-entry-of-year">
+                {% if next_year != year %}
+                <article itemscope class="last-entry-of-year">
                     {% else %}
-                        <article itemscope>
-                    {% endif %}
-                {% endif %}
+                    <article itemscope>
+                        {% endif %}
+                        {% endif %}
+                        {% endif %}
 
-                <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a>
-                <time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
-                </article>
-            {% endfor %}
+                        {% if article.category != 'MYPAGE' %}
+                        <a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a>
+                        <time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
+                        {% endif %}
+                    </article>
+                    {% endfor %}
         </div>
     </div>
 </div>
