--- a/templates/categories.html
+++ b/templates/categories.html
@@ -41,23 +41,27 @@ All categories of the {{ SITENAME|striptags|e }} blog.
     <div class="span8 offset2">
         <div class="accordion" id="accordion2">
             {% for category, articles in categories %}
+            {% if category != 'MYPAGE' %}
             <div class="accordion-group">
                 <div class="accordion-heading">
                     <a class="accordion-toggle list-of-categories" data-toggle="collapse" data-parent="#accordion2" href="#{{ category.slug }}-ref">
                         {% set num = articles|count %}
-                        {{ category }}<span>{{ num }}</span>
+                        {{ category }} <span>{{ num }}</span>
                     </a>
                 </div>
                 <div id="{{ category.slug }}-ref" class="accordion-body collapse">
                     <div class="accordion-inner">
                         <ul class="list-articles-category">
                             {% for article in articles %}
+                            {% if article.visible != 'False' %}
                             <li itemscope><time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }} {%if article.subtitle %} <small> {{ article.subtitle }} </small> {% endif %} </a></li>
+                            {% endif %}
                             {% endfor %}
                         </ul>
                     </div>
                 </div>
             </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
