--- a/templates/_includes/comments.html
+++ b/templates/_includes/comments.html
@@ -1,5 +1,5 @@
 {% macro comments(article) %}
-    {% if DISQUS_SITENAME and SITEURL and article.status != 'draft' %}
+    {% if DISQUS_SITENAME and SITEURL and article.status != 'draft' and article.comments != 'False' %}
 <hr />
 <section>
 {% if article.comments_intro %}
