--- a/templates/_includes/footer.html
+++ b/templates/_includes/footer.html
@@ -9,7 +9,7 @@
         {% if SITE_LICENSE %}
         <li class="elegant-license">{{ SITE_LICENSE }}</li>
         {% endif %}
-        <li class="elegant-power">Powered by <a href="http://getpelican.com/" title="Pelican Home Page">Pelican</a>. Theme: <a href="https://github.com/Pelican-Elegant/elegant/" title="Theme Elegant Home Page">Elegant</a></li>
+        <li class="elegant-power">Proudly powered by <a href="http://getpelican.com/" title="Pelican Home Page">Pelican</a> and <a href="https://github.com/Pelican-Elegant/elegant/" title="Theme Elegant Home Page">Elegant theme</a></li>
     </ul>
 </div>
 </footer>
