--- a/templates/index.html
+++ b/templates/index.html
@@ -102,7 +102,11 @@
             {% if loop.index0 < RECENT_ARTICLES_COUNT %}
             <div itemscope class="recent-posts-article">
                 <a href="{{ SITEURL }}/{{ article.url }}">
-                    {{ article.title }}
+                    {% if article.favourite %}
+                        {{ FAVOURITE_SYMBOL }} {{ article.title }}
+                    {% else %}
+                        {{ article.title }}
+                    {% endif %}
                     {%if article.subtitle %}
                     <small class="subtitle">
                         {{ article.subtitle }}
