--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,12 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </a>
-                        <a class="brand" href="{{ SITEURL }}/"><span class=site-name>{{ SITENAME }}</span></a>
+                        <a class="brand" href="
+                                  {% if LANDINGSITE %}
+                                  {{ LANDINGSITE }}
+                                  {% else %}
+                                  {{ SITEURL }}
+                                  {% endif %}/"><span class=site-name>{{ SITENAME }}</span></a>
                         <div class="nav-collapse collapse">
                             <ul class="nav pull-right top-menu">
                                 <li {% if page_name == 'index' %} class="active"{% endif %}>
