style: resize 'gitlab' icons
it's bigger than others

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -63,6 +63,12 @@
   background: white;
 }
 
+.gitlab svg{
+  width: 30px;
+  margin-left: 5px;
+  border-bottom: thin dashed white;
+}
+
 .twitter:hover {
   background: #1A91DA;
 }
