--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -88,3 +88,25 @@
 .gitlab:hover {
   background: #DD6D1C;
 }
+
+/* badges */
+
+.badges {
+  display: block;
+  font-size: 0;
+  list-style: none;
+  margin: 30 auto;
+  text-align: center;
+  width: 80rem;
+  max-width: 100%;
+}
+
+.badges li {
+  display: inline-block;
+  margin: 8px;
+  margin: 0.2rem;
+}
+
+.badges a {
+  border-bottom: thin dashed white;
+}
