style: reword footer brand

--- a/templates/_includes/footer.html
+++ b/templates/_includes/footer.html
@@ -25,8 +25,8 @@
     {% endif %}
 
     <div id="fpowered">
-        Powered by: <a href="http://getpelican.com/" title="Pelican Home Page" target="_blank" rel="nofollow">Pelican</a>
-        Theme: <a href="https://elegant.oncrashreboot.com/" title="Theme Elegant Home Page" target="_blank" rel="nofollow">Elegant</a>
+        <a href="https://elegant.oncrashreboot.com/" title="Theme Elegant Home Page" target="_blank" rel="nofollow">Elegant</a> theme
+        on <a href="http://getpelican.com/" title="Pelican Home Page" target="_blank" rel="nofollow">Pelican</a>
         {% if HOSTED_ON and HOSTED_ON.name %}
         Hosted on:
         {% if HOSTED_ON.url %}
