--- a/templates/_includes/post_stats.html
+++ b/templates/_includes/post_stats.html
@@ -1,5 +1,5 @@
 {% from '_includes/_defaults.html' import READING_TIME_LOWER_LIMIT with context %}
 {% if article.stats and article.stats['read_mins'] and article.stats['read_mins'] > READING_TIME_LOWER_LIMIT %}
-    <h4>Reading Time</h4>
-    <p>~{{ article.stats['read_mins'] }} min read</p>
+    <h4>{% trans %}Reading Time{% endtrans %}</h4>
+    <p>~{{ article.stats['read_mins'] }}{% trans %} min read{% endtrans %}</p>
 {% endif %}
