--- a/templates/archives.html
+++ b/templates/archives.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-All Posts · {{ super() }}
+{% trans %}All Posts · {% endtrans %}{{ super() }}
 {% endblock title %}
 
 {% block head_description %}
@@ -28,7 +28,7 @@ Full archives of {{ SITENAME|striptags|e }} blog.
 {% from '_includes/_defaults.html' import ARCHIVES_URL with context %}
 <div class="row-fluid">
     <header class="page-header span10 offset2">
-    <h1><a href="{{ SITEURL }}/{{ ARCHIVES_URL }}">All Posts</a></h1>
+    <h1><a href="{{ SITEURL }}/{{ ARCHIVES_URL }}">{% trans %}All Posts{% endtrans %}</a></h1>
     </header>
 </div>
 <div class="row-fluid">
