--- a/templates/article.html
+++ b/templates/article.html
@@ -113,20 +113,20 @@
         <section id="article-sidebar" class="span2">
             {% include '_includes/post_stats.html' %}
             {% if article.date %}
-            <h4>Published</h4>
+            <h4>{% trans %}Published{% endtrans %}</h4>
             {% set day = article.date.strftime('%d')|int %}
             <time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
             {% endif %}
             {% include '_includes/last_updated.html' %}
             {% include '_includes/series.html' %}
             {% if article.category|trim|count > 0 %}
-            <h4>Category</h4>
+            <h4>{% trans %}Category{% endtrans %}</h4>
             {% from '_includes/_defaults.html' import CATEGORIES_URL with context %}
             <a class="category-link" href="{{ SITEURL }}/{{ CATEGORIES_URL }}#{{ category.slug }}-ref">{{ article.category }}</a>
             {% endif %}
             {% if article.tags and article.tags[0]|trim|count > 0 %}
             {% from '_includes/_defaults.html' import TAGS_URL with context %}
-            <h4>Tags</h4>
+            <h4>{% trans %}Tags{% endtrans %}</h4>
             <ul class="list-of-tags tags-in-article">
                 {% for tag in article.tags|sort %}
                 <li><a href="{{ SITEURL }}/{{ TAGS_URL }}#{{ tag.slug }}-ref">{{ tag }}
