--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,7 @@
                                        {% else %}
                                        "/"
                                        {% endif %}
-                                    >Archive</a>
+                                    >{% trans %}Archive{% endtrans %}</a>
                                 </li>
                                 {% if DISPLAY_PAGES_ON_MENU %}
                                 {% for p in pages %}
@@ -91,9 +91,9 @@
                                 {% endfor %}
                                 {% endif %}
                                 {% from '_includes/_defaults.html' import TAGS_URL, CATEGORIES_URL, ARCHIVES_URL, SEARCH_URL, FAVOURITES_URL with context %}
-                                <li {% if page_name == 'favorites' %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ FAVOURITES_URL }}">Favorites</a></li>
-                                <li {% if page_name == 'categories' %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ CATEGORIES_URL }}">Categories</a></li>
-                                <li {% if page_name == 'tags' %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ TAGS_URL }}">Tags</a></li>
+                                <li {% if page_name == 'favorites' %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ FAVOURITES_URL }}">{% trans %}Favorites{% endtrans %}</a></li>
+                                <li {% if page_name == 'categories' %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ CATEGORIES_URL }}">{% trans %}Categories{% endtrans %}</a></li>
+                                <li {% if page_name == 'tags' %} class="active"{% endif %}><a href="{{ SITEURL }}/{{ TAGS_URL }}">{% trans %}Tags{% endtrans %}</a></li>
                                 <li><form class="navbar-search" action="{{ SITEURL }}/{{ SEARCH_URL }}" onsubmit="return validateForm(this.elements['q'].value);"> <input type="text" class="search-query" placeholder="Search" name="q" id="tipue_search_input"></form></li>
                             </ul>
                         </div>
