--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-All Categories · {{ super() }}
+{% trans %}All Categories · {% endtrans %}{{ super() }}
 {% endblock title %}
 
 {% block head_description %}
@@ -33,7 +33,7 @@ All categories of the {{ SITENAME|striptags|e }} blog.
 {% from '_includes/_defaults.html' import CATEGORIES_URL with context %}
 <div class="row-fluid">
     <header class="page-header span10 offset2">
-    <h1><a href="{{ SITEURL }}/{{ CATEGORIES_URL }}">All Categories</a></h1>
+    <h1><a href="{{ SITEURL }}/{{ CATEGORIES_URL }}">{% trans %}All Categories{% endtrans %}</a></h1>
     </header>
 </div>
 
