--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-Favorite Posts · {{ super() }}
+{% trans %}Favorite Posts · {% endtrans %}{{ super() }}
 {% endblock title %}
 
 {% block head_description %}
@@ -28,7 +28,7 @@ Favorites posts of {{ SITENAME|striptags|e }} blog.
 {% from '_includes/_defaults.html' import FAVOURITES_URL with context %}
 <div class="row-fluid">
     <header class="page-header span10 offset2">
-        <h1><a href="{{ SITEURL }}/{{ FAVOURITES_URL }}">Favorite Posts</a></h1>
+        <h1><a href="{{ SITEURL }}/{{ FAVOURITES_URL }}">{% trans %}Favorite Posts{% endtrans %}</a></h1>
     </header>
 </div>
 <div class="row-fluid">
