--- a/templates/index.html
+++ b/templates/index.html
@@ -92,7 +92,7 @@
     <div class="row-fluid">
         <div class="{{ css_class }}">
             <header class="page-header span12">
-            <h1 id="recent-posts">Recent Posts <a id="allposts" href="{{ SITEURL }}/{{ ARCHIVES_URL }}">all posts</a></h1>
+            <h1 id="recent-posts">{% trans %}Recent Posts{% endtrans %}<a id="allposts" href="{{ SITEURL }}/{{ ARCHIVES_URL }}">{% trans %}all posts{% endtrans %}</a></h1>
             </header>
         <div class="recent-posts">
             {% for article in articles %}
@@ -107,7 +107,7 @@
                     {% endif %}
                 </a>
                 <div class="recent-posts-posted">
-                    posted in
+                    {% trans %}posted in{% endtrans %}
                     <a href="{{ SITEURL }}/{{ CATEGORIES_URL }}#{{ article.category.slug }}-ref">{{ article.category }}</a>
                     <time itemprop="dateCreated" datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>
                 </div>
