--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}
-All Tags · {{ super() }}
+{% trans %}All Tags · {% endtrans %}{{ super() }}
 {% endblock title %}
 
 {% block head_description %}
@@ -33,7 +33,7 @@ All tags used in the {{ SITENAME|striptags|e }} blog.
 {% from '_includes/_defaults.html' import TAGS_URL with context %}
 <div class="row-fluid">
     <header class="page-header span10 offset2">
-    <h1><a href="{{ SITEURL }}/{{ TAGS_URL }}">All Tags</a></h1>
+    <h1><a href="{{ SITEURL }}/{{ TAGS_URL }}">{% trans %}All Tags{% endtrans %}</a></h1>
     </header>
 </div>
 <div class="row-fluid">
