fix: use default website
Default website (not subsites) already filtering posts with DEFAULT_LANG

--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
                                 {% if DEFAULT_LANG == "en" %}
                                 <li><a href="{{ PERMANENTURL }}/id">🇮🇩</a></li>
                                 {% else %}
-                                <li><a href="{{ PERMANENTURL }}/en">🇬🇧</a></li>
+                                <li><a href="{{ PERMANENTURL }}">🇬🇧</a></li>
                                 {% endif %}
 
                                 <li {% if page_name == 'index' %} class="active"{% endif %}>
