--- a/templates/_includes/analytics.html
+++ b/templates/_includes/analytics.html
@@ -33,3 +33,9 @@
         })();
     </script>
 {% endif %}
+
+{% if GOAT_COUNTER %}
+<script data-goatcounter="{ GOAT_COUNTER }}"
+        async src="//gc.zgo.at/count.js">
+</script>
+{% endif %}
